# Aurora-Hak-Explorer

./: CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: test_and_release.yml
assets/: kwin-active-output.js
packaging/: WINDOWS-PORTABLE.txt  aurora-hak-explorer-mime.xml  aurora-hak-explorer.appdata.xml  aurora-hak-explorer.desktop  build-appimage.sh  build-windows-portable.sh
src/: archive.rs  dnd_extract.rs  drag_cleanup.rs  drag_out.rs  drag_out_windows.rs  game_resources.rs  main.rs  mdl.rs  resource_types.rs
tools/: README.md
tools/aurora-nwnmdlcomp/: CHANGELOG.md  Cargo.toml  QUALIFICATION.md  README.md  THIRD_PARTY_NOTICES.md  USAGE.md  rust-toolchain.toml
tools/aurora-nwnmdlcomp/src/: lib.rs  main.rs  routines.rs
tools/aurora-nwnmdlcomp/tests/: cli.rs
tools/linux/: nwnmdlcomp
tools/nwnmdlcomp-src/nwnmdlcomp/: nwnmdlcomp.cpp
