[package]
name = "aurora-hak-explorer"
version = "1.3.1"
edition = "2024"
description = "A native, open-source HAK/ERF archive explorer for Neverwinter Nights"
license = "GPL-3.0-or-later"
authors = ["Winternite"]

[dependencies]
arboard = "3.6"
eframe = { version = "0.35", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["bmp", "dds", "gif", "ico", "jpeg", "png", "pnm", "tga", "tiff", "webp"] }
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "pollster"] }
raw-window-handle = "0.6"
tempfile = "3.23"
winit = { version = "0.30", default-features = false, features = ["x11", "wayland"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11-dl = "2.21"
x11rb = "0.13"
zbus = "5.17"

[target.'cfg(target_os = "windows")'.dependencies]
drag = "2.1.1"
uds_windows = "1.2.1"
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
embed-resource = "3.0"

# wayland-scanner 0.31.10 still requests quick-xml 0.39, which is affected by
# RUSTSEC-2026-0194 and RUSTSEC-2026-0195. Its parser is compatible with the
# fixed 0.41 series, so keep the upstream source locally with that one
# dependency advanced until wayland-rs publishes the equivalent update.
[patch.crates-io]
drag = { path = "vendor/drag" }
wayland-scanner = { path = "vendor/wayland-scanner" }
winit = { path = "vendor/winit" }

[profile.release]
lto = false
codegen-units = 1
strip = true
