[package]
name = "aurora-nwnmdlcomp"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Modern Rust compiler and decompiler for Neverwinter Nights: Enhanced Edition MDL models"
license = "GPL-3.0-only"

[[bin]]
name = "nwnmdlcomp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
glob = "0.3"
nwnrs-types = { path = "vendor/nwnrs-types", default-features = false, features = ["mdl", "key"] }
rayon = "1.11"
tempfile = "3.23"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
